--- a/data/blog/1676943246815.mdx
+++ b/data/blog/1676943246815.mdx
@@ -8,8 +8,8 @@ summary: 源码共读笔记，omit.js
 
 ### Github 仓库地址
 
-*   github1s: <https://github1s.com/benjycui/omit.js>
-*   github: <https://github.com/benjycui/omit.js>
+*   [github1s](https://github1s.com/benjycui/omit.js)
+*   [github](https://github.com/benjycui/omit.js)
 
 ### 参考文章
 
@@ -28,9 +28,9 @@ summary: 源码共读笔记，omit.js
 
 其他一些方法库中也是一样的方法的。比如：
 
-*   TS 中有 Omit 内置方法：[zhuanlan.zhihu.com/p/397398407](https://link.juejin.cn?target=https%3A%2F%2Fzhuanlan.zhihu.com%2Fp%2F397398407 "https://zhuanlan.zhihu.com/p/397398407")
-*   underscore.js 也有这个方法：<https://underscorejs.org/docs/modules/omit.html>
-*   lodash 也有 omit 方法：[docs-lodash.com/v4/omit/](https://link.juejin.cn?target=https%3A%2F%2Fdocs-lodash.com%2Fv4%2Fomit%2F "https://docs-lodash.com/v4/omit/")
+*   [TS 中有 Omit 内置方法](zhuanlan.zhihu.com/p/397398407)
+*   [underscore.js 也有这个方法](https://underscorejs.org/docs/modules/omit.html)
+*   [lodash 也有 omit 方法](docs-lodash.com/v4/omit/)
 
 ### 源码目录
 
