feat: 调整页脚边距和 about me

--- a/data/authors/default.mdx
+++ b/data/authors/default.mdx
@@ -1,11 +1,16 @@
 ---
 name: 何三金
 avatar: /static/images/Avatar.svg
-occupation: Professor of Atmospheric Science
-company: Stanford University
-email: address@yoursite.com
+occupation: 前端开发工程师
+company: 杭州博彦科技有限公司
+email: worldhsx@163.com
 juejin: https://juejin.cn/user/4406498335130216
-github: https://github.com
+github: https://github.com/foxhsx
 ---
 
-说点啥呢
+前端程序员
+
+假文艺青年
+
+深度焦虑患者
+
