更新 实现垂直水平都居中的方式

--- a/data/blog/1665806948489.mdx
+++ b/data/blog/1665806948489.mdx
@@ -1,7 +1,7 @@
 ---
 title: 实现垂直水平都居中的方式
-date: 8/30/2023
-tags: [css,样式,前端,居中,水平垂直都居中]
+date: 8/31/2023
+tags: [css,样式,前端]
 draft: false
 summary: 实现垂直水平都居中的方式
 ---
