--- a/data/blog/1665503043617.mdx
+++ b/data/blog/1665503043617.mdx
@@ -1,7 +1,7 @@
 ---
 title: 给元素设置水平居中
-date: 8/29/2023
-tags: [css,样式,前端,居中,水平居中]
+date: 8/31/2023
+tags: [css,样式,前端]
 draft: false
 summary: 使用 CSS 实现元素的居中效果
 ---
