--- a/data/blog/1684851552162.mdx
+++ b/data/blog/1684851552162.mdx
@@ -54,7 +54,7 @@ systemctl status mongod
 >
 > Active: active (running) since Sun 2023-05-21 17:42:13 CST; 6min ago
 >
-> Docs: <https://docs.mongodb.org/manual>
+> Docs: [manual](https://docs.mongodb.org/manual)
 >
 > Main PID: 43790 (mongod)
 >
