更新 使用 hexo 搭配 github 搭建自己的静态个人博客

--- a/data/blog/1694243328494.mdx
+++ b/data/blog/1694243328494.mdx
@@ -70,7 +70,7 @@ hexo deployer // （可简写为 hexo d）
 
 14.第一次执行会让你输入 github账号和密码\
 15.回车后，再去看刚刚的新仓库，发现博客已经上传上去了。\
-16.打开你的博客地址即可。如：<https://foxhsx.github.io>
+16.打开你的博客地址即可。如：[github 博客](https://foxhsx.github.io)
 
 ### 总结
 
