更新 JS 数组去重的十种方法

--- a/data/blog/1694416127214.mdx
+++ b/data/blog/1694416127214.mdx
@@ -3,7 +3,7 @@ title: JS 数组去重的十种方法
 date: 9/11/2023
 tags: [JavaScript,面试,前端]
 draft: false
-summary: 数组的去重方法，其实无论实在实际项目还是在面试中都会有用到的，下面我们来列举一下常见的几个：使用 for 循环和 includes使用 Set 和 Array.from()使用 for 循环和 indexOffor 循环嵌套 for 循环，结合 splice使用 sort 和 reduce 方法使用 filter 和 indexOf使用 forEach 循环和 Map使用 reduce 和 includes使用扩展运算符和 set如果是数组对象的数据格式，可以使用 forEach 和 _数组去重
+summary: 数组的去重方法，其实无论实在实际项目还是在面试中都会有用到的，下面我们来列举一下常见的几个
 ---
 
 数组的去重方法，其实无论实在实际项目还是在面试中都会有用到的，下面我们来列举一下常见的几个：
