更新 var、let 和 const 的区别

--- a/data/blog/1694413771640.mdx
+++ b/data/blog/1694413771640.mdx
@@ -3,7 +3,7 @@ title: var、let 和 const 的区别
 date: 9/11/2023
 tags: [JavaScript,前端,面试]
 draft: false
-summary: 前端八股文之-var/let/const 的区别
+summary: 首先我们知道 var、let 和 const  都是声明变量用的，但是它们三个除了这个共同点之外，其他部分都各不相同，下面我们来看下。varvar 关键词，是用来声明一个变量的，并可选地将其初始化为一个值。var num = 1;var str = 'hello world';var fn = () =&gt; {};// 也可以声明多个变量，中间用逗号隔开var a = 1, b = 2, c = 3;特点：它的作用域是它当前的执行上下文，本身是根据声明位置决定是全局变量还是局部变量。
 ---
 
 首先我们知道 `var\let\const` 都是声明变量用的，但是它们三个除了这个共同点之外，其他部分都各不相同，下面我们来看下。
