更新 call、apply 和 bind 的区别

--- a/data/blog/1694245143159.mdx
+++ b/data/blog/1694245143159.mdx
@@ -1,9 +1,9 @@
 ---
 title: call、apply 和 bind 的区别
-date: 9/9/2023
+date: 9/11/2023
 tags: [JavaScript,面试,前端]
 draft: false
-summary: 前端八股文面试题之「call、apply 和 bind 的区别」
+summary: 前面面试八股文系列_js call apply和bind的区别
 ---
 
 先来依次看下这三个 API。
