更新 继承的方式

--- a/data/blog/1694272663775.mdx
+++ b/data/blog/1694272663775.mdx
@@ -3,7 +3,7 @@ title: 继承的方式
 date: 9/11/2023
 tags: [JavaScript,面试,前端]
 draft: false
-summary: 原生 JavaScript 中的原型、原型链以及继承的方式介绍
+summary: 什么是继承对于继承这个概念来说大家都不陌生，在现实中有儿子继承父业，孙子继承了爷爷的财产等等。那么在编程中，我们熟知的继承其实主要来自于面向对象编程。而很多的面向对象语言都支持两种继承：接口继承和实现继承。前者是只继承方法签名，后者继承实际的方法。继承的主要作用是将一些抽象的模块抽离出来，作为一个父类使用，这样便于实际编程中代码的可复用性和可维护性，也从一定程度上减少代码冗余，使得代码更加的简洁整齐。在 JavaScript 中接口继承是不可能实现的，因为函数没有签名。所以实现继承成了 JavaScr_js 类继承接口
 ---
 
 ### 什么是继承
