--- a/data/blog/1665411852224.mdx
+++ b/data/blog/1665411852224.mdx
@@ -1,9 +1,9 @@
 ---
 title: CSS 浮动
-date: 8/28/2023
+date: 9/11/2023
 tags: [css,浮动,样式,前端]
 draft: false
-summary: CSS 浮动
+summary: 从概念上来说，浮动是指定一个子元素在其父元素内部靠左或者靠右放置，是允许文本和内联元素环绕它的。
 ---
 
 ### 概念
