更新 给元素设置水平居中

--- a/data/blog/1665503043617.mdx
+++ b/data/blog/1665503043617.mdx
@@ -1,9 +1,9 @@
 ---
 title: 给元素设置水平居中
-date: 8/31/2023
+date: 9/11/2023
 tags: [css,样式,前端]
 draft: false
-summary: 使用 CSS 实现元素的居中效果
+summary: 设置内联元素的水平居中、设置定宽高的块元素的水平居中和设置不定宽高的块元素的水平居中的方法
 ---
 
 ### 一、设置内联元素的水平居中
