更新 实现垂直水平都居中的方式

--- a/data/blog/1665806948489.mdx
+++ b/data/blog/1665806948489.mdx
@@ -1,9 +1,9 @@
 ---
 title: 实现垂直水平都居中的方式
-date: 8/31/2023
+date: 9/11/2023
 tags: [css,样式,前端]
 draft: false
-summary: 实现垂直水平都居中的方式
+summary: 定宽高的元素在屏幕窗口水平垂直都居中、不定宽高的元素在屏幕窗口水平垂直都居中、定宽高的子元素在父元素中水平垂直都居中、不定宽高的子元素在父元素中水平垂直都居中和万能居中大法
 ---
 
 我们在项目中，一般实现垂直水平都居中有以下五种常用或者说常见的方式。
