--- a/data/blog/1666107174710.mdx
+++ b/data/blog/1666107174710.mdx
@@ -1,9 +1,9 @@
 ---
 title: 媒体查询
-date: 9/1/2023
+date: 9/11/2023
 tags: [css,前端,样式]
 draft: false
-summary: CSS 中的媒体查询简介
+summary: 媒体查询，是我们让网站适配各设备尺寸的方式之一，它是响应式设计的关键组成部分。常用的方式有两种：外联媒体查询和内嵌式媒体查询
 ---
 
 媒体查询，是我们让网站适配各设备尺寸的方式之一，它是响应式设计的关键组成部分。
