更新 实现吸顶的方式

--- a/data/blog/1666411654806.mdx
+++ b/data/blog/1666411654806.mdx
@@ -1,9 +1,9 @@
 ---
 title: 实现吸顶的方式
-date: 9/4/2023
+date: 9/11/2023
 tags: [css,前端,样式]
 draft: false
-summary: 使用 CSS 实现吸顶的效果
+summary: 使用 CSS 中的 fixed 固定定位和 sticky 粘性定位来实现吸顶的效果
 ---
 
 吸顶是在项目中常见的效果，今天的 demo 主要就是来说下常见的两种实现吸顶的方式。
