更新 词法环境是什么？

--- a/data/blog/1694422914619.mdx
+++ b/data/blog/1694422914619.mdx
@@ -110,8 +110,8 @@ fn()
     inside_variable1 = 'fn';
     let inside_variable2 = 'function';
     {
-      block_variable1 = 'var_block';
-      let block_variable2 = 'let_block';
+      block_variable1 = 'block_var';
+      let block_variable2 = 'block_var';
     }
 
 代码在被 JavaScript 引擎编译并创建全局上下文，放入到调用栈中，如下图：\
