--- a/data/blog/1694422914619.mdx
+++ b/data/blog/1694422914619.mdx
@@ -96,23 +96,25 @@ fn()
 
 实际的代码执行顺序是：
 
-    // 全局代码的执行过程
-    var global_variable1;
-    fn;
-    global_variable1 = 'Hello';
-    let global_variable2 = 'World';
-    fn = function() {}
-    fn()
+```javascript
+// 全局代码的执行过程
+var global_variable1;
+fn;
+global_variable1 = 'Hello';
+let global_variable2 = 'World';
+fn = function() {}
+fn()
 
-    // fn 内部执行顺序
-    var inside_variable1;
-    var block_variable1;
-    inside_variable1 = 'fn';
-    let inside_variable2 = 'function';
-    {
-      block_variable1 = 'block_var';
-      let block_variable2 = 'block_var';
-    }
+// fn 内部执行顺序
+var inside_variable1;
+var block_variable1;
+inside_variable1 = 'fn';
+let inside_variable2 = 'function';
+{
+  block_variable1 = 'block_var';
+  let block_variable2 = 'block_var';
+}
+```
 
 代码在被 JavaScript 引擎编译并创建全局上下文，放入到调用栈中，如下图：\
 ![](https://note.ihsxu.com/api/imgs/1694423218862.webp)\
@@ -121,7 +123,7 @@ fn()
 而当代码执行到块级作用域时，块级作用域不存在编译过程，词法环境就是一个小型的栈，所以这里块级作用域的执行是将变量加入到当前 fn 环境的词法环境中去。（就懒得画图了，自行脑补）。\
 我们再来看看作用域链的查找是怎样的，假如我们现在要查找全局变量 global\_variable1，那么会从 fn 的词法环境向上逐一查找，直到找到为止。
 
-    fn 词法环境--》fn 变量环境--》全局词法环境--》全局变量环境
+> fn 词法环境--》fn 变量环境--》全局词法环境--》全局变量环境
 
 最后在代码执行完之后，挨个儿出栈。
 
