--- a/data/authors/default.mdx
+++ b/data/authors/default.mdx
@@ -1,8 +1,8 @@
 ---
-name: 何三金
+name: 我是猫
 avatar: /static/images/Avatar.svg
 occupation: 前端开发工程师
-company: 杭州博彦科技有限公司
+company: 在外包
 email: worldhsx@163.com
 juejin: https://juejin.cn/user/4406498335130216
 github: https://github.com/foxhsx
