--- a/data/blog/1677078518058.mdx
+++ b/data/blog/1677078518058.mdx
@@ -1,7 +1,7 @@
 ---
 title: 自建内网穿透服务器
-date: 9/9/2023
-tags: [frp,内网穿透]
+date: 9/14/2023
+tags: [内网穿透]
 draft: false
 summary: 使用 frp 自建内网穿透服务器
 ---
