--- a/data/blog/1695051724554.mdx
+++ b/data/blog/1695051724554.mdx
@@ -1,7 +1,7 @@
 ---
 title: 怎么在Github上单独下载一个文件或文件夹
-date: 9/19/2023
-tags: [工具推荐]
+date: 9/20/2023
+tags: [工具]
 draft: false
 summary: 我们经常会在开发过程中上全球最大的同性交友网站查（chao）找（xi）一些优秀的开源项目，来填充自己空虚的内心，经常会用到的命令就是 git clone，使用 clone 来下载整个项目到本地。但是平常还有一种需求就是——你可能只需要其中的一个文件夹或者文件，那么这个时候我们怎么去进行下载呢？github 可没有提供单个文件或文件夹下载的API。
 ---
