--- a/data/blog/1665411852224.mdx
+++ b/data/blog/1665411852224.mdx
@@ -1,7 +1,7 @@
 ---
 title: CSS 浮动
-date: 9/11/2023
-tags: [css,浮动,样式,前端]
+date: 9/20/2023
+tags: [css,前端]
 draft: false
 summary: 从概念上来说，浮动是指定一个子元素在其父元素内部靠左或者靠右放置，是允许文本和内联元素环绕它的。
 ---
