更新 给元素设置水平居中

--- a/data/blog/1665503043617.mdx
+++ b/data/blog/1665503043617.mdx
@@ -1,7 +1,7 @@
 ---
 title: 给元素设置水平居中
-date: 9/11/2023
-tags: [css,样式,前端]
+date: 9/20/2023
+tags: [css,前端]
 draft: false
 summary: 设置内联元素的水平居中、设置定宽高的块元素的水平居中和设置不定宽高的块元素的水平居中的方法
 ---
