更新 使用 flex 弹性布局

--- a/data/blog/1665970136100.mdx
+++ b/data/blog/1665970136100.mdx
@@ -1,7 +1,7 @@
 ---
 title: 使用 flex 弹性布局
-date: 9/11/2023
-tags: [css,样式,前端]
+date: 9/20/2023
+tags: [css,前端]
 draft: false
 summary: 使用 flex 弹性盒进行弹性布局，首先我们需要知道弹性布局的概念，通常我们喊它 flexbox，即弹性盒，它是一种一维的布局模型。它会给 flexbox 里的子元素之间提供强大的空间分布和对齐能力。
 ---
