更新 媒体查询

--- a/data/blog/1666107174710.mdx
+++ b/data/blog/1666107174710.mdx
@@ -1,7 +1,7 @@
 ---
 title: 媒体查询
-date: 9/11/2023
-tags: [css,前端,样式]
+date: 9/20/2023
+tags: [css,前端]
 draft: false
 summary: 媒体查询，是我们让网站适配各设备尺寸的方式之一，它是响应式设计的关键组成部分。常用的方式有两种：外联媒体查询和内嵌式媒体查询
 ---
