更新 边框、阴影和鼠标属性串讲

--- a/data/blog/1666284102576.mdx
+++ b/data/blog/1666284102576.mdx
@@ -1,7 +1,7 @@
 ---
 title: 边框、阴影和鼠标属性串讲
-date: 9/3/2023
-tags: [css,前端,样式]
+date: 9/20/2023
+tags: [css,前端]
 draft: false
 summary: 边框、阴影和鼠标样式属性串讲
 ---
