更新 实现吸顶的方式

--- a/data/blog/1666411654806.mdx
+++ b/data/blog/1666411654806.mdx
@@ -1,7 +1,7 @@
 ---
 title: 实现吸顶的方式
-date: 9/11/2023
-tags: [css,前端,样式]
+date: 9/21/2023
+tags: [css,前端]
 draft: false
 summary: 使用 CSS 中的 fixed 固定定位和 sticky 粘性定位来实现吸顶的效果
 ---
