更新 使用 hexo 搭配 github 搭建自己的静态个人博客

--- a/data/blog/1694243328494.mdx
+++ b/data/blog/1694243328494.mdx
@@ -1,7 +1,7 @@
 ---
 title: 使用 hexo 搭配 github 搭建自己的静态个人博客
-date: 9/9/2023
-tags: [hexo,博客]
+date: 9/21/2023
+tags: [搭建博客]
 draft: false
 summary: 保姆级教程--如何使用 github 和 hexo 来搭建自己的博客
 ---
