更新 从0到1上线一个Web项目

--- a/data/blog/1668746989763.mdx
+++ b/data/blog/1668746989763.mdx
@@ -1,9 +1,9 @@
 ---
 title: 从0到1上线一个Web项目
-date: 8/24/2023
-tags: [保姆教学,上线项目,静态博客,博客,hexo]
+date: 9/21/2023
+tags: [搭建博客]
 draft: false
-summary: 小白也能学会的个人博客部署
+summary: 小白也能学会的web项目部署
 ---
 
 我们以一个静态站点和一个服务端 demo 为例。
