--- a/data/blog/1668949848169.mdx
+++ b/data/blog/1668949848169.mdx
@@ -1,7 +1,7 @@
 ---
 title: npm-镜像源
-date: 8/26/2023
-tags: [node,npm,yarn,镜像源,淘宝镜像源]
+date: 9/21/2023
+tags: [node]
 draft: false
 summary: 记录配置 npm 镜像源
 ---
