--- a/data/blog/1677991972670.mdx
+++ b/data/blog/1677991972670.mdx
@@ -1,7 +1,7 @@
 ---
 title: React 优化手册
-date: 8/25/2023
-tags: [React,react优化,前端,前端优化]
+date: 9/21/2023
+tags: [React,前端]
 draft: false
 summary: 记录了一些平时看到的对 React 的优化手段
 ---
