--- a/data/blog/1684851552162.mdx
+++ b/data/blog/1684851552162.mdx
@@ -1,7 +1,7 @@
 ---
 title: MongoDB 基础
-date: 9/7/2023
-tags: [mongoDB,数据库]
+date: 9/21/2023
+tags: [mongoDB]
 draft: false
 summary: mongoDB 安装，连接以及创建集合
 ---
