更新 Nginx 常用功能

--- a/data/blog/1684851694439.mdx
+++ b/data/blog/1684851694439.mdx
@@ -1,7 +1,7 @@
 ---
 title: Nginx 常用功能
-date: 9/6/2023
-tags: [nginx,反向代理]
+date: 9/21/2023
+tags: [nginx]
 draft: false
 summary: 常用的 Nginx 功能、命令及配置
 ---
