更新 你值得拥有的 VSCode 插件

--- a/data/blog/1698645572241.mdx
+++ b/data/blog/1698645572241.mdx
@@ -1,6 +1,6 @@
 ---
 title: 你值得拥有的 VSCode 插件
-date: 11/10/2023
+date: 11/25/2023
 tags: [VSCode]
 draft: false
 summary: 推荐一些提高开发效率和好玩儿的插件
@@ -358,4 +358,30 @@ export default $1
 当我们在字符串中输入 `${` 的时候，这个插件会帮我们自动将该字符串转换为模板字符串。
 
 ![](https://note.ihsxu.com/api/imgs/template_converter.gif)
+
+### 13. Git History
+
+![](https://note.ihsxu.com/api/imgs/1700817992067.webp)
+
+这个插件是用来查看当前文件的 Git 历史记录，并且它还具有比较文件版本的能力。在编辑器的右上角找到一个时钟的图标，那个是该插件的入口，点击之后会有一个简洁的界面来展示 Git 提交历史。
+
+![](https://note.ihsxu.com/api/imgs/1700891299878.webp)
+
+打开以后展示：
+
+![](https://note.ihsxu.com/api/imgs/1700891326935.webp)
+
+### 14. Auto Import
+
+![](https://note.ihsxu.com/api/imgs/1700891415420.webp)
+
+这个插件可以自动查找、解析并生成代码中正在使用的依赖路径。
+
+### 15. Import Cost(Javascript and Typescript)
+
+![](https://note.ihsxu.com/api/imgs/1700818320777.webp)
+
+可以展示当前 `import` 或者 `require`进来的包的大小。
+
+![](https://note.ihsxu.com/api/imgs/importCost.gif)
 
