更新 Github 宣布在2023年底前必须使用双重验证

--- a/data/blog/1703300543567.mdx
+++ b/data/blog/1703300543567.mdx
@@ -42,7 +42,7 @@ Github 首席安全官 Mike Hanley 在博客中提到：
 >
 > 1.  **钓鱼攻击（Phishing）**：通过伪装成合法机构或者个人，发送虚假的电子邮件、短信或者网站链接，诱导受害人输入个人账户信息、密码或者敏感信息。
 > 2.  **预文本信息攻击（Pretexting）**：攻击者伪装成他人，通过编造虚假的理由或者身份来诱使受害者透露信息或者执行特定操作。
-> 3.  **人员招聘/渗透测试**：攻击者伪装成潜在雇主或者客户，以获取内部信息或者物理访问权限。
+> 3.  **人员招聘或渗透测试**：攻击者伪装成潜在雇主或者客户，以获取内部信息或者物理访问权限。
 > 4.  **垃圾邮件攻击**：发送包含恶意软件或者链接的垃圾邮件，通过诱导受害者点击链接或者下载附件，以便攻击者获取系统访问权限或者窃取信息。
 >
 > 社会工程攻击通常需要攻击者对目标受害者进行深入的调查和分析，以便制定相应的欺骗方案。为了防范社会工程攻击，个人和组织需要加强对安全意识的培训，对于未知来源的信息和请求，我们要谨慎对待，保护自己的个人信息。
@@ -116,5 +116,4 @@ Github 首席安全官 Mike Hanley 在博客中提到：
 然后将我们保存在本地的 Recovery code 中的任意一个 code 输入进去即可完成登录。
 
 ![](https://note.ihsxu.com/api/imgs/1703307922172.webp)
-
 
