更新 Github 宣布在2023年底前必须使用双重验证

--- a/data/blog/1703300543567.mdx
+++ b/data/blog/1703300543567.mdx
@@ -87,10 +87,7 @@ Github 首席安全官 Mike Hanley 在博客中提到：
 ![](https://note.ihsxu.com/api/imgs/1703306688431.webp)
 
 *   此时我们就可以通过刚刚安装的 app 来扫描这个二维码添加这个 Github 账号，选中「已验证 ID」-「扫码 QR 码」即可进行账户添加（这里截不了图，大家可以根据描述来进行操作）。
-*   添加好 Github 账户之后，在 App 的首页就可以看到你 Github 的账户已经被展示出来了，我们点击这条记录然后就可以看到一个展示一次性密码的页面，将这个 6 位数验证码输入到浏览器中 「Verify the code from the app」的输入框中之后，Github 会自动进行验证
-
-<!---->
-
+*   添加好 Github 账户之后，在 App 的首页就可以看到你 Github 的账户已经被展示出来了，我们点击这条记录然后就可以看到一个展示一次性密码的页面，将这个 6 位数验证码输入到浏览器中 「Verify the code from the app」的输入框中之后，Github 会自动进行验证。
 *   完成上述步骤之后，Github 会返回给我们一个 Recovery Codes，这个 Codes 需要我们点击 「Download」 保存在本地。
 
 ![](https://note.ihsxu.com/api/imgs/1703307068826.webp)
