--- a/data/blog/1708181455493.mdx
+++ b/data/blog/1708181455493.mdx
@@ -28,6 +28,8 @@ Sora 的使用非常简单，只需按以下步骤即可生成所需的视频：
 
 然后 Sora 最终生成了一个视频：[tokyo-walk](https://note.ihsxu.com/api/video/tokyo-walk.mp4)
 
+<video controls="" autoplay="" name="media" data-fullscreen-container="true"><source src="https://note.ihsxu.com/api/video/tokyo-walk.mp4" type="video/mp4"></video>
+
 ### 适用场景
 
 Sora 作为一种革命性的文本到视频模型，确实有巨大的潜力影响多个行业，以下是一些可能的影响：
