--- a/data/blog/1708181455493.mdx
+++ b/data/blog/1708181455493.mdx
@@ -28,7 +28,7 @@ Sora 的使用非常简单，只需按以下步骤即可生成所需的视频：
 
 然后 Sora 最终生成了一个视频：[tokyo-walk](https://note.ihsxu.com/api/video/tokyo-walk.mp4)
 
-<video controls="" autoplay="" name="media" data-fullscreen-container="true"><source src="https://note.ihsxu.com/api/video/tokyo-walk.mp4" type="video/mp4" /></video>
+<video src="https://note.ihsxu.com/api/video/tokyo-walk.mp4" controls></video>
 
 ### 适用场景
 
