--- a/data/blog/1677078518058.mdx
+++ b/data/blog/1677078518058.mdx
@@ -140,13 +140,13 @@ Cannot connect to the Docker daemon at unix:///var/run/docker.sock. Is the docke
     ```bash
     [common]
     # server_addr为FRPS服务器IP地址
-    server_addr = 8.142.108.138
+    server_addr = 你的 ip 地址
     # server_port为服务端监听端口，bind_port
     server_port = 7000
     # 用户
     user = admin
     # 身份验证
-    token = hsx12345678
+    token = 你的自定义 token
 
     [ssh]
     type = tcp
