更新 Sora：输入文本内容生成一分钟视频

--- a/data/blog/1708181455493.mdx
+++ b/data/blog/1708181455493.mdx
@@ -1,6 +1,6 @@
 ---
 title: Sora：输入文本内容生成一分钟视频
-date: 2/18/2024
+date: 2/20/2024
 tags: [AI]
 draft: false
 summary: Open AI 另一颠覆性产品——Sora：根据文本内容自动生成一分钟视频
@@ -28,7 +28,9 @@ Sora 的使用非常简单，只需按以下步骤即可生成所需的视频：
 
 然后 Sora 最终生成了一个视频：[tokyo-walk](https://note.ihsxu.com/api/video/tokyo-walk.mp4)
 
-<video controls="" autoplay="" name="media" data-fullscreen-container="true"><source src="https://note.ihsxu.com/api/video/tokyo-walk.mp4" type="video/mp4"></video>
+\&lt;video src="https\://note.ihsxu.com/api/video/tokyo-walk.mp4" controls /\&gt;
+
+
 
 ### 适用场景
 
