更新 如何免费使用 GPT4？字节跳动的 Coze 来了！

--- a/data/blog/1708613637793.mdx
+++ b/data/blog/1708613637793.mdx
@@ -1,12 +1,12 @@
 ---
 title: 如何免费使用 GPT4？字节跳动的 Coze 来了！
-date: 2/22/2024
+date: 2/23/2024
 tags: [AI]
 draft: false
 summary: 如何免费使用 GPT4？字节跳动的 Coze 来了！
 ---
 
-月初的时候，字节跳动正式推出了名为「Coze 扣子」的 AI Bot 开发平台，为用户提供了一个快速、低门槛的搭建自己的 Chatbot 的机会。除了支持一键发布到飞书、微信公众号、豆包等渠道外，这个平台还提供了 Bots 商店和各类娱乐、创意和学习等产品的插件，让用户更便捷地使用自己定制的 Chatbot。
+月初的时候，字节跳动正式推出了名为「Coze 扣子」的 AI Bot 开发平台，为用户提供了一个快速、低门槛的搭建属于自己的 Chatbot 的机会。除了支持一键发布到飞书、微信公众号、豆包等渠道外，这个平台还提供了 Bots 商店和各类娱乐、创意、学习等产品的插件，让用户更便捷地使用自己定制的 Chatbot。
 
 [官网链接](https://www.coze.com/)
 
@@ -14,7 +14,7 @@ summary: 如何免费使用 GPT4？字节跳动的 Coze 来了！
 
 ### Coze 具有哪些功能？
 
-Coze 不仅**免费提供原生的 GPT-4**，还能更快地构建上层应用基于 GPT。相较于官方市场的全程使用体验更为顺畅，无需繁琐步骤，**只需简单的国内手机验证码即可登录**。目前，Coze 支持完整的应用程序编辑，并**配置了丰富的插件**，如联网、画图和同步 Notion 等功能，助用户轻松可视化定义工作流程。
+Coze 不仅**免费提供原生的 GPT-4**，还能基于 GPT 更快地构建上层应用。相较于其他 GPT4 的注册及使用，Coze 体验更为顺畅，无需繁琐步骤，**只需简单的国内手机验证码即可登录**。目前，Coze 支持完整的应用程序编辑，并**配置了丰富的插件**，如联网、画图和同步 Notion 等功能，助用户轻松可视化定义工作流程。
 
 ![](https://note.ihsxu.com/api/imgs/1708616044048.webp)
 
@@ -28,11 +28,13 @@ Coze 提供了丰富的插件和应用商店，让用户更加灵活地定制 Ch
 
 ![](https://note.ihsxu.com/api/imgs/1708616139943.webp)
 
+### 注册及使用
+
 字节跳动将 Coze 定位为一个应用创作平台，让用户无需编程经验即可开发属于自己的 AI chatbot。
 
 在 Coze 上创建 Chatbot 非常简单，只需几步操作即可轻松上手。
 
-首先，用户需要注册并登录账号。
+首先，用户需要注册并登录账号。这里支持手机号码注册，也可以直接使用字节旗下的短视频 app 账号直接登录。
 
 然后，在平台上创建一个 bot，并进行个性化定制。
 
