--- a/data/blog/1708613637793.mdx
+++ b/data/blog/1708613637793.mdx
@@ -6,7 +6,7 @@ draft: false
 summary: 如何免费使用 GPT4？字节跳动的 Coze 来了！
 ---
 
-月初的时候，字节跳动正式推出了名为「Coze 扣子」的 AI Bot 开发平台，为用户提供了一个快速、低门槛的搭建属于自己的 Chatbot 的机会。除了支持一键发布到飞书、微信公众号、豆包等渠道外，这个平台还提供了 Bots 商店和各类娱乐、创意、学习等产品的插件，让用户更便捷地使用自己定制的 Chatbot。
+月初的时候，字节跳动正式推出了名为「Coze 扣子」的 AI Bot 开发平台，为用户提供了一个快速、低门槛的搭建属于自己的 Chatbot 的机会。除了**支持一键发布到飞书、微信公众号、豆包**等渠道外，这个平台还提供了 Bots 商店和各类娱乐、创意、学习等产品的插件，让用户更便捷地使用自己定制的 Chatbot。
 
 [官网链接](https://www.coze.com/)
 
@@ -14,7 +14,7 @@ summary: 如何免费使用 GPT4？字节跳动的 Coze 来了！
 
 ### Coze 具有哪些功能？
 
-Coze 不仅**免费提供原生的 GPT-4**，还能基于 GPT 更快地构建上层应用。相较于其他 GPT4 的注册及使用，Coze 体验更为顺畅，无需繁琐步骤，**只需简单的国内手机验证码即可登录**。目前，Coze 支持完整的应用程序编辑，并**配置了丰富的插件**，如联网、画图和同步 Notion 等功能，助用户轻松可视化定义工作流程。
+Coze 不仅**免费提供原生的 GPT-4**，还能基于 GPT 更快地构建上层应用。相较于其他 GPT4 产品的注册及使用，Coze 体验更为顺畅，无需繁琐步骤，**只需简单的国内手机验证码即可登录**。目前，Coze 支持完整的应用程序编辑，并**配置了丰富的插件**，如联网、画图和同步 Notion 等功能，助用户轻松可视化定义工作流程。
 
 ![](https://note.ihsxu.com/api/imgs/1708616044048.webp)
 
@@ -36,15 +36,15 @@ Coze 提供了丰富的插件和应用商店，让用户更加灵活地定制 Ch
 
 首先，用户需要注册并登录账号。这里支持手机号码注册，也可以直接使用字节旗下的短视频 app 账号直接登录。
 
-然后，在平台上创建一个 bot，并进行个性化定制。
+然后，在平台上创建一个 bot，并进行个性化定制（即名称、bot 的描述和 bot 的图片）。
 
 ![](https://note.ihsxu.com/api/imgs/1708616206150.webp)
 
-最后用户可以根据需求添加插件和功能，完成之后点击右上角的 pulish 进行发布，打造独特的 Chatbot。
+点击 Confirm 确定之后，用户可以根据需求添加插件和功能，完成之后点击右上角的 publish 进行发布，打造属于自己的 Chatbot。
 
 ![](https://note.ihsxu.com/api/imgs/1708616219728.webp)
 
-可以看到整个编排页面分为四个区域，分别是：
+从上图我们可以看到整个编排页面分为四个区域，分别是：
 
 | **功能区**                      | **说明**                                                                                                                              |
 | :--------------------------- | :---------------------------------------------------------------------------------------------------------------------------------- |
@@ -52,6 +52,12 @@ Coze 提供了丰富的插件和应用商店，让用户更加灵活地定制 Ch
 | ② 人设与回复逻辑区域 - 左侧区域，其实就是设置提示词 | 设置 Bot 的人物设定与回复逻辑。                                                                                                                  |
 | ③ 技能区域 - 中间部分                | 展示 Bot 配置的功能，以**旅游大师** Bot 为例：**插件**：添加了用于查询航班的插件。**工作流**：添加了名为 **recommended\_places** 的工作流，该工作流用于推荐景点。**开场白**：打开 Bot 时默认展示的开场白内容。 |
 | ④ 预览与调试区域 - 右侧区域             | 展示与 Bot 交互的运行结果。                                                                                                                    |
+
+在发布时，我们也可以通过选择发布平台，将 Chatbot 轻松发布到你想要的第三方平台上。
+
+![](https://note.ihsxu.com/api/imgs/1708664407139.webp)
+
+> ⚠️注意：目前Coze只支持发布到微信服务号（企业和组织公众号），不支持发布到微信订阅号（个人公众号），不过希望以后也能支持到个人公众号😊（强烈建议！！）
 
 这些操作无需用户拥有编程经验即可轻松创建自己的 Chatbot。友好的用户界面简化了操作步骤，帮助用户快速上手。同时，Coze 提供了丰富的文档和教程，帮助用户了解平台功能和使用技巧。
 
