更新 如何免费使用 GPT4？字节跳动的 Coze 来了！

--- a/data/blog/1708613637793.mdx
+++ b/data/blog/1708613637793.mdx
@@ -36,11 +36,11 @@ Coze 提供了丰富的插件和应用商店，让用户更加灵活地定制 Ch
 
 首先，用户需要注册并登录账号。这里支持手机号码注册，也可以直接使用字节旗下的短视频 app 账号直接登录。
 
-然后，在平台上创建一个 bot，并进行个性化定制（即名称、bot 的描述和 bot 的图片）。
+然后，在平台上点击创建一个 bot，并在弹出的对话框中输入名称、bot 的描述和 bot 的头像（这个头像可以通过点击旁边的 「Generate」按钮用 AI 生成一个～）。
 
 ![](https://note.ihsxu.com/api/imgs/1708616206150.webp)
 
-点击 Confirm 确定之后，用户可以根据需求添加插件和功能，完成之后点击右上角的 publish 进行发布，打造属于自己的 Chatbot。
+点击 Confirm 确定之后，就会进到 chatbot 的编排页面，用户在里面可以根据需求添加插件和功能，完成之后点击右上角的 publish 进行发布，即可打造属于自己的 Chatbot。
 
 ![](https://note.ihsxu.com/api/imgs/1708616219728.webp)
 
