更新 如何免费使用 GPT4？字节跳动的 Coze 来了！

--- a/data/blog/1708613637793.mdx
+++ b/data/blog/1708613637793.mdx
@@ -40,11 +40,7 @@ Coze 提供了丰富的插件和应用商店，让用户更加灵活地定制 Ch
 
 ![](https://note.ihsxu.com/api/imgs/1708616206150.webp)
 
-点击 Confirm 确定之后，就会进到 chatbot 的编排页面，用户在里面可以根据需求添加插件和功能，完成之后点击右上角的 publish 进行发布，即可打造属于自己的 Chatbot。
-
-![](https://note.ihsxu.com/api/imgs/1708616219728.webp)
-
-从上图我们可以看到整个编排页面分为四个区域，分别是：
+点击 Confirm 确定之后，就会进到 chatbot 的编排页面，它主要包含四个部分，如下图所示，分别是：
 
 | **功能区**                      | **说明**                                                                                                                              |
 | :--------------------------- | :---------------------------------------------------------------------------------------------------------------------------------- |
@@ -53,17 +49,45 @@ Coze 提供了丰富的插件和应用商店，让用户更加灵活地定制 Ch
 | ③ 技能区域 - 中间部分                | 展示 Bot 配置的功能，以**旅游大师** Bot 为例：**插件**：添加了用于查询航班的插件。**工作流**：添加了名为 **recommended\_places** 的工作流，该工作流用于推荐景点。**开场白**：打开 Bot 时默认展示的开场白内容。 |
 | ④ 预览与调试区域 - 右侧区域             | 展示与 Bot 交互的运行结果。                                                                                                                    |
 
-在发布时，我们也可以通过选择发布平台，将 Chatbot 轻松发布到你想要的第三方平台上。
+![](https://note.ihsxu.com/api/imgs/1708616219728.webp)
+
+用户在技能区域可以根据自己的需求添加插件和功能，比如：
+
+1.  添加 Google Web Search 用来进行内容搜索
+2.  添加 DALLE 3用来根据描述生成图片
+3.  添加 notion 插件来获取 notion 内容等等
+
+![](https://note.ihsxu.com/api/imgs/1708699857187.webp)
+
+也可以增加 Workflows 工作流或者知识库等等。
+
+而在设置提示词区域，我们可以预设一下这个 Chatbot 的角色是什么，比如输入：「你是一个经验丰富的开发者」，然后点击「Optimize」优化按钮，让 Coze 在此基础上帮我们丰富提示词的内容（当然也可以不点击）。
+
+![](https://note.ihsxu.com/api/imgs/1708702785623.webp)
+
+接下来我们就来测试一下：
+
+![](https://note.ihsxu.com/api/imgs/1708702812139.webp)
+
+还可以生成图片：
+
+![](https://note.ihsxu.com/api/imgs/1708702950043.webp)
+
+完美～～😍
+
+接下来我们就可以点击右上角的 publish 按钮进行发布，最终完成属于自己的 Chatbot。
+
+在发布时，我们也可以通过选择发布平台，将 Chatbot 轻松发布到你想要的第三方平台上（国际版和国内版支持的平台是不同的，下方是国内版支持的平台）。
 
 ![](https://note.ihsxu.com/api/imgs/1708664407139.webp)
 
 > ⚠️注意：目前Coze只支持发布到微信服务号（企业和组织公众号），不支持发布到微信订阅号（个人公众号），不过希望以后也能支持到个人公众号😊（强烈建议！！）
 
-这些操作无需用户拥有编程经验即可轻松创建自己的 Chatbot。友好的用户界面简化了操作步骤，帮助用户快速上手。同时，Coze 提供了丰富的文档和教程，帮助用户了解平台功能和使用技巧。
+以上这些操作都无需用户拥有编程经验即可轻松创建自己的 Chatbot。友好的用户界面简化了操作步骤，帮助用户快速上手。同时，Coze 提供了丰富的文档和教程，帮助用户了解平台功能和使用技巧。
 
 Coze 的推出为用户提供了快速、低门槛的搭建 Chatbot 的机会，让更多人享受 Chatbot 带来的便利和乐趣。无论个人使用还是商业应用，Coze 都提供丰富的功能和定制选项，满足不同用户需求。
 
 相信未来，Coze 将不断升级完善，带来更多创新和惊喜。
 
-> 补充：现在 Coze 有两个官网，一个国内版本已经无法使用 GPT4 了，[传送地址](https://www.coze.cn)；一个国际版本（国内访问不了，但是免费使用 GPT4 是真的）。
+> 补充：现在 Coze 有两个网站，一个国内版本已经无法使用 GPT4 了，[传送地址](https://www.coze.cn)；一个国际版本（国内访问不了，但是免费使用 GPT4 是真的）。
 
