更新 如何免费使用 GPT4？字节跳动的 Coze 来了！

--- a/data/blog/1708613637793.mdx
+++ b/data/blog/1708613637793.mdx
@@ -75,7 +75,7 @@ Coze 提供了丰富的插件和应用商店，让用户更加灵活地定制 Ch
 
 完美～～😍
 
-接下来我们就可以点击右上角的 publish 按钮进行发布，最终完成属于自己的 Chatbot。
+最后我们就可以点击右上角的 publish 按钮进行发布，最终完成属于自己的 Chatbot。
 
 在发布时，我们也可以通过选择发布平台，将 Chatbot 轻松发布到你想要的第三方平台上（国际版和国内版支持的平台是不同的，下方是国内版支持的平台）。
 
