--- a/data/blog/1709531035934.mdx
+++ b/data/blog/1709531035934.mdx
@@ -1,9 +1,9 @@
 ---
-title: 【免费AI】面对海量内容束手无策?看看 KimiChat 如何轻松解决你的烦恼！
+title: 【免费AI】面对海量内容束手无策？看看 KimiChat 如何轻松解决你的烦恼！
 date: 3/5/2024
 tags: [AI]
 draft: false
-summary: 面对海量内容束手无策？看看 KimiChat 如何轻松解决你的烦恼！
+summary: 面对海量内容束手无策?看看 KimiChat 如何轻松解决你的烦恼！
 ---
 
 大家好，今天我要和大家分享一个隐藏的宝藏 — **Kimi Chat**，一个由**Moonshot AI**团队开发的**超强免费AI助手**。很多人可能还没听说过它，但它的能力绝对能让很多付费产品黯然失色。
