更新 使用 Docker 一键免费部署 63.8k 的私人 ChatGPT 网页应用

--- a/data/blog/1710083134064.mdx
+++ b/data/blog/1710083134064.mdx
@@ -6,7 +6,7 @@ draft: false
 summary: 一键免费部署私人 ChatGPT 网页应用，并支持 GPT3, GPT4 & Gemini Pro 模型的 NextChat
 ---
 
-这次要介绍的也是一个 AI 项目，而且在 GIthub 上的 star 比上次介绍的 gptfree4 的项目还要多，足足 63.8k！
+这次要介绍的也是一个 AI 项目，而且在 Github 上的 star 比上次介绍的 gpt4free 的项目还要多，足足 63.8k！
 
 它就是可以一键免费部署私人 ChatGPT 网页应用，并支持 GPT3, GPT4 & Gemini Pro 模型的 NextChat（项目名叫 ChatGPT-Next-Web）。
 
@@ -37,7 +37,7 @@ docker run -d -p 3000:3000 \
 
 ![](https://note.ihsxu.com/api/imgs/1710085130308.webp)
 
-不过这个时候还没法直接用，可以通过提示里提供的「登录」或者「设置」链接跳转到这个页面进行密码或者 API 秘钥的设置：
+不过这个时候还没法直接用，需要通过对话框里提供的「登录」或者「设置」链接跳转到这个页面进行密码或者 API 秘钥的设置：
 
 ![](https://note.ihsxu.com/api/imgs/1710085270264.webp)
 
