更新 2.1k 的 coze-discord-proxy 让我实现免费使用 DELL-3 画图

--- a/data/blog/1710685865405.mdx
+++ b/data/blog/1710685865405.mdx
@@ -1,5 +1,5 @@
 ---
-title: coze-discord-proxy 让我实现免费使用 DELL-3 画图
+title: 2.1k 的 coze-discord-proxy 让我实现免费使用 DELL-3 画图
 date: 3/21/2024
 tags: [AI]
 draft: false
