更新 它是 GPT-4.5 吗？神秘大模型冲上热搜

--- a/data/blog/1714456791816.mdx
+++ b/data/blog/1714456791816.mdx
@@ -95,3 +95,11 @@ claude opus 画的：
 
 ![](https://note.ihsxu.com/api/imgs/1714575887264.webp)
 
+### 打了一天擂就跑了
+
+貌似就来打了一天的擂台就消失了，今天 LMSYS 上已经无法再使用它了：
+
+![](https://note.ihsxu.com/api/imgs/1714576191465.webp)
+
+来也匆匆，去也匆匆，恨不能相逢😭
+
