--- a/data/blog/1714456791816.mdx
+++ b/data/blog/1714456791816.mdx
@@ -1,14 +1,14 @@
 ---
-title: 它是 GPT-4.5 吗？神秘大模型冲上热搜
+title: 它是 GPT-4.5 吗？神秘大模型冲上 AI 热搜
 date: 5/1/2024
 tags: [AI]
 draft: false
 summary: 一波来自 OpenAI 的烟雾弹？
 ---
 
-昨天的时候，LMSYS 上出现了一款新的大模型 `gpt2-chatbot`，在没有任何文档的情况下，它在竞技场上与其他大模型之间开始了 PK，且战绩斐然！
+昨天的时候，LMSYS 上出现了一款新的大模型 `gpt2-chatbot`，在没有任何官方文档介绍的情况下，它在竞技场上与其他大模型之间开始一场场 PK，且战绩斐然！
 
-无独有偶，OpenAI 的奥特曼在社交平台上也发帖称对 gpt2 情有独钟，这使大家纷纷猜测：难道是 GPT-4.5？
+与此同时，OpenAI 的奥特曼在社交平台上也发帖称对 gpt2 情有独钟，这使大家纷纷猜测：难道是 GPT-4.5 或者 GPT-5？
 
 那它到底有多强呢？让我们一起来看下：
 
