更新 在英伟达官网免费使用 SD-XL 文生图 和 Llama3-70b 等 AI 产品

--- a/data/blog/1715483859496.mdx
+++ b/data/blog/1715483859496.mdx
@@ -6,11 +6,13 @@ draft: false
 summary: 又是一个白嫖开源 AI 模型的网站，大厂背书，值得一试
 ---
 
+<https://mp.weixin.qq.com/s/EFJYpt_Z3OWlXOXzd4VF8A>
+
 今天在逛英伟达官网的时候，发现在他们网站上可以免费使用各种比较火的开源大模型，包括：
 
-*   Chat 对话、推理：**Llama-3、Phi-3** 等；
-*   文生图：**sdxl-turbo、stable-diffusion-xl、edify-image、edify-3d-early-access**（3D 的喔～）；
-*   图生视频：**Stable-video-diffusion**；
+*   Chat 对话、推理：Llama-3、Phi-3 等；
+*   文生图：sdxl-turbo、stable-diffusion-xl、edify-image、edify-3d-early-access（3D 的喔～）；
+*   文生视频：Stable-video-diffusion；
 
 > 尤其是 Stable Diffusion 这个文生图模型，其实很多人的电脑配置都无法达到它运行的最低标准。
 
@@ -139,7 +141,7 @@ emmm，没看懂😂
 
 ### 视觉设计（Visual Design）
 
-在视觉设计中，我们平常可以用到就是文生图 Stable Diffusion 模型了，**以 sdxl-turbo 和 stable-diffusion-xl 这两个模型**为例来生成图片看看：
+在视觉设计中，我们平常可以用到就是文生图 Stable Diffusion 模型了，以 sdxl-turbo 和 stable-diffusion-xl 这两个模型为例来生成图片看看：
 
 ![](https://note.ihsxu.com/api/imgs/1715491293607.webp)
 
@@ -155,13 +157,15 @@ emmm，没看懂😂
 
 ![](https://note.ihsxu.com/api/imgs/1715491556639.webp)
 
-如图，sdxl\_turbo 胜出🏆。不过文生图模型可能因为比较消耗资源的原因，只提供了 25 次免费调用的机会。
+如图，sdxl\_turbo 胜出🏆。文生图模型因为比较消耗资源的原因，对于访客只提供了 25 次调用的机会。
 
-#### stable-video-diffusion
+接下来我们试试 stable-video-diffusion 试试图生视频：
 
-接下来我们试试 stable-video-diffusion 试试图生视频，提供一张今天在咖啡店拍的照片：
+提供一张今天在咖啡店拍的照片
 
 ![](https://note.ihsxu.com/api/imgs/1715491823504.webp)
+
+#### stable-video-diffusion
 
 上传图片并开始 run 起来，大概有个十来秒就生成了一个 4s 的视频：
 
@@ -169,9 +173,5 @@ emmm，没看懂😂
 
 ![](https://note.ihsxu.com/api/imgs/1715492142968.webp)
 
-视频在这里：[stable\_video](https://note.ihsxu.com/api/video/stable_video.mp4)
-
-有点高糊而且有点卡哈哈哈，不过免费的还要什么自行车。
-
-有兴趣的小伙伴快去试试吧～
+视频在这里：[stable\_video]()
 
