更新 在英伟达官网免费使用 SD-XL 文生图 和 Llama3-70b 等 AI 产品

--- a/data/blog/1715483859496.mdx
+++ b/data/blog/1715483859496.mdx
@@ -6,8 +6,6 @@ draft: false
 summary: 又是一个白嫖开源 AI 模型的网站，大厂背书，值得一试
 ---
 
-<https://mp.weixin.qq.com/s/EFJYpt_Z3OWlXOXzd4VF8A>
-
 今天在逛英伟达官网的时候，发现在他们网站上可以免费使用各种比较火的开源大模型，包括：
 
 *   Chat 对话、推理：Llama-3、Phi-3 等；
@@ -174,4 +172,8 @@ emmm，没看懂😂
 ![](https://note.ihsxu.com/api/imgs/1715492142968.webp)
 
 视频在这里：[stable\_video]()
+
+生成的视频有点高糊而且卡顿，但是免费的还要什么自行车呢～
+
+感兴趣的小伙伴可以去试试看😁
 
