更新 在英伟达官网免费使用 SD-XL 文生图 和 Llama3-70b 等 AI 产品

--- a/data/blog/1715483859496.mdx
+++ b/data/blog/1715483859496.mdx
@@ -157,13 +157,11 @@ emmm，没看懂😂
 
 如图，sdxl\_turbo 胜出🏆。文生图模型因为比较消耗资源的原因，对于访客只提供了 25 次调用的机会。
 
-接下来我们试试 stable-video-diffusion 试试图生视频：
+#### stable-video-diffusion
 
-提供一张今天在咖啡店拍的照片
+接下来我们试试 stable-video-diffusion 试试图生视频，提供一张今天在咖啡店拍的照片：
 
 ![](https://note.ihsxu.com/api/imgs/1715491823504.webp)
-
-#### stable-video-diffusion
 
 上传图片并开始 run 起来，大概有个十来秒就生成了一个 4s 的视频：
 
