更新 CO-STAR，新加坡首届 GPT-4 提示工程大赛冠军的夺冠宝典

--- a/data/blog/1715484573201.mdx
+++ b/data/blog/1715484573201.mdx
@@ -100,7 +100,7 @@ summary: 看看冠军的夺冠宝典
 
 📍坐标：古城西安护城河边，等你来发现这片隐藏的美好\~
 
-✨ HEA的简约风店面+超大落地窗和天窗，让阳光洒满每个角落，尤其是傍晚日落时分，整个空间都被余晖染上了柔和的色彩，美得让人心动！🌞📸
+✨ HEA的装修风格时尚、简约+超大落地窗和天窗，让阳光洒满每个角落，尤其是傍晚日落时分，整个空间都被余晖染上了柔和的色彩，美得让人心动！🌞📸
 
 👩‍💻👨‍🎓 上班族、大学生们，这里简直是你们的理想休憩地！无论是工作学习还是放松休闲，都能在这里找到属于自己的那份宁静与美好。💻☕️
 
@@ -108,7 +108,7 @@ summary: 看看冠军的夺冠宝典
 
 📸每个角落都是拍照圣地，随手一拍就是 INS 风大片！赶紧带上小伙伴来打卡拍照吧，刷爆朋友圈不是梦！✨👯‍♀️
 
-🎉:周末来HEA和朋友们一起享受一杯咖啡，度过一个悠闲的午后时光，给自己的生活增添一份小确幸吧！🍰👭
+🎉:周末来HEA和朋友们一起享受一杯咖啡，度过一个悠闲的午后时光，跨过门口那个地毯，进入到新的世界！🍰👭
 
 \#西安咖啡店 #网红打卡地 #阳光咖啡店 #护城河边 #HEA咖啡店 #日落余晖 #咖啡排行榜 #精致生活
 
