更新 38.2k 的 AI 开发平台 Dify 教程四：自定义 AI 工具（ChatGPT Actions）

--- a/data/blog/1720967082138.mdx
+++ b/data/blog/1720967082138.mdx
@@ -1,5 +1,5 @@
 ---
-title: 38.2k 的 AI 应用平台 Dify 教程四：自定义 AI 工具
+title: 38.2k 的 AI 开发平台 Dify 教程四：自定义 AI 工具（ChatGPT Actions）
 date: 7/22/2024
 tags: [AI]
 draft: false
