更新 Github 推出免费使用的 Github Models，助力用户快速成为 AI 工程师

--- a/data/blog/1722672877436.mdx
+++ b/data/blog/1722672877436.mdx
@@ -22,7 +22,7 @@ summary: Github 推出的 Github Models，免费体验 Llama 3.1 和 OpenAI 的 
 
 ### 如何使用？
 
-Github Models 还不是全量开放给用户的，还**需要进行申请**，只有申请通过的用户才可以使用，申请链接在这里👉：<https://github.com/marketplace/models/waitlist/join>
+Github Models 还不是全量开放给用户的，还**需要进行申请**，只有申请通过的用户才可以使用，[申请链接](https://github.com/marketplace/models/waitlist/join)
 
 > 三金已经提交申请了，但暂时还没有啥音讯😓
 
