更新 363 Star！开箱即用的增强版 ChatTTS 一键整合包

--- a/data/blog/1723417701487.mdx
+++ b/data/blog/1723417701487.mdx
@@ -16,11 +16,19 @@ summary: 开箱即用的 ChatTTS 一键整合包
 
 安装后双击打开，就可以快速启动增强版的 ChatTTS 了～～
 
-![](https://note.ihsxu.com/api/imgs/1723419723065.webp)
+![](https://note.ihsxu.com/api/imgs/1723560628639.webp)
 
-目前已经更新到了 V3 版本，这个版本中的亮点如上图顶部的描述所言：支持长文本、中英混读、优化噪音等等。
+目前已经更新到了 V3 版本，这个版本中的亮点如下：
 
-长文本效果：
+1.  音质增强/降噪解决Chat-TTS生成时的噪音问题。
+2.  支持多TXT、SRT文件批量处理。
+3.  支持长文本处理，支持中英混读。可自定义切割长度。
+4.  支持导出srt文件。
+5.  支持调节语速、停顿、笑声、口语化程度等参数。
+6.  支持导入ChatTTS Speaker音色。详情看帮助。
+7.  支持储存音色配置与选项配置。方便管理。
+
+那长文本效果具体如何呢？我们一起来听一下：
 
 > 语音占位
 
