更新 部署 4.8k star 的 Xinference 接入本地 Rerank 模型

--- a/data/blog/1726668290426.mdx
+++ b/data/blog/1726668290426.mdx
@@ -18,10 +18,7 @@ Xorbits Inference (Xinference) 是一个开源平台，用于简化各种 AI 模
 
 它支持的模型种类有：
 
-*   语言模型：比如 qwen2、baichuan、deepseek、gemma 等场景的语言模型；
-
-<!---->
-
+*   语言模型：比如 qwen2、baichuan、deepseek、gemma 等场景的语言模型
 *   Embedding 模型：有 Jina 的 Embedding 模型（结合 Rerank，知识库检索不就起来了嘛😁）；
 *   Rerank 模型：有 Jina 的 Rerank 模型；
 *   图像模型：除了 Stable Diffusion 之外，还有 Flux 模型；
