更新 Dify 工作流分享-JinaSum

--- a/data/blog/1727503583489.mdx
+++ b/data/blog/1727503583489.mdx
@@ -40,6 +40,26 @@ summary: 一些 Dify 工作流分享——如何通过 Workflow 实现一个 Jin
 
 ![](https://note.ihsxu.com/api/imgs/1727505489443.webp)
 
+> 提示词：
+>
+> 我需要对下面的文本进行总结，总结输出包括以下三个部分：
+>
+> 一句话总结
+>
+> 🔑 关键要点,用数字序号列出3-5个文章的核心内容
+>
+> 🏷 标签: #xx #xx
+>
+> 请使用emoji让你的表达更生动。
+>
+>
+>
+> \`\`\`markdown
+>
+> <这里记得接收上个节点输出的数据>
+>
+> \`\`\`
+
 *   最后通过结束节点输出内容
 
 我们来测试一下：
