--- a/data/blog/1733553721923.mdx
+++ b/data/blog/1733553721923.mdx
@@ -1,5 +1,5 @@
 ---
-title: 【待办】在 Dify 中接入 Flux 和 Stable Diffusion
+title: 在 Dify 中接入 Flux 和 Stable Diffusion
 date: 12/10/2024
 tags: [AI]
 draft: false
